2010-11-14  Sancho Lerena <slerena@artica.es>
	
	* bin/util/pandora_update.exe: This small binary (see the Unix
	perl version to see the sources), allow to replace the running
	windows binary, by stopping the service and restarting it. Will
	allow automatic upgrades of the agent using the fille collection
	mechanism.

2010-11-12  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: isServiceRunning returns -1 for module
	  states other than "Running" and "Stopped".

	* modules/pandora_module_logevent.cc,
	  modules/pandora_module_logevent.h: Return a non empty string if
	  the event description can not be read. Save the event id as an
	  unsigned long int to avoid overflows.

	* modules/pandora_module_service.cc,
	  modules/pandora_module_service.h: Aesthetic fix. Removed carriage
	  returns.

2010-11-08  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_logevent.cc,
	  modules/pandora_module_logevent.h: Re-wrote the module to avoid
	  using EVENTLOG_SEEK_READ, which seems to cause a lot of trouble.

2010-11-05  Ramon Novoa  <rnovoa@artica.es>

	* installer/pandora.mpi: Updated installation messages.

	* pandora_windows_service.cc: startup_delay after the service is
	  started, not before. Read all secondary server parameters.

2010-11-03  Ramon Novoa  <rnovoa@artica.es>

	* bin/util/tentacle_client.exe: Updated the tentacle client.

2010-10-27  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_logevent.cc: We need more information on error
	  997, ignore it for now.

2010-10-04  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: Fixed inventory NIC information.

2010-10-04  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_inventory.cc: Fixed XML generation for
	  inventory modules.

2010-08-04  Ramon Novoa  <rnovoa@artica.es>

	* Makefile.am: Use -static-libstdc++ to remove the dependency on
	  libstdc++-6.dll.

2010-08-04  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc: Free the collection if it can not